--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": ["esnext"], /* Can be ["esnext", "dom", "dom.iterable"], *
+    "lib": ["esnext"] /* Can be ["esnext", "dom", "dom.iterable"], */,
     "module": "esnext",
     "declaration": true,
     "outDir": "./dist",
     "esModuleInterop": true,
-    "strict": true,
+    "strict": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
